do not use guava immutable map (part 2)
GitOrigin-RevId: a30122e0670b70932eed14da4c391317153c5024